--- a/eas.json
+++ b/eas.json
@@ -14,5 +14,9 @@
       "developmentClient": true
     },
     "production": {}
+  },
+  "cli": {
+    "version": ">= 0.48.2",
+    "requireCommit": true
   }
 }
